# PaneLink

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
crates/panelink-audio/: Cargo.toml
crates/panelink-audio/src/: lib.rs
crates/panelink-capture/: Cargo.toml
crates/panelink-capture/src/: lib.rs
crates/panelink-core/: Cargo.toml
crates/panelink-core/src/: display_plan.rs  lib.rs
crates/panelink-discovery/: Cargo.toml
crates/panelink-discovery/src/: lib.rs
crates/panelink-input/: Cargo.toml
crates/panelink-input/src/: lib.rs
crates/panelink-transport/: Cargo.toml
crates/panelink-transport/src/: lib.rs
crates/panelink-video/: Cargo.toml
crates/panelink-video/src/: lib.rs
crates/panelink-virtual-display/: Cargo.toml
crates/panelink-virtual-display/src/: lib.rs
docs/: architecture.md  release.md  roadmap.md  technical-research.md
public/: display.html
src/: App.tsx  display-routing.ts  fixtures.ts  frame-timing.ts  h264-decoder.ts  main.tsx  manual-peer.ts  styles.css  tauri.ts  types.ts  updater.ts  video-endpoint.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: display-routing.test.ts  frame-timing.test.ts  h264-decoder.test.ts  manual-peer.test.ts  video-endpoint.test.ts
