[package]
name = "panelink"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
panelink-audio.workspace = true
panelink-capture.workspace = true
panelink-core.workspace = true
panelink-discovery.workspace = true
panelink-input.workspace = true
panelink-transport.workspace = true
serde.workspace = true
tauri.workspace = true
