[package]
name = "panelink"
version = "0.1.37"
edition.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
base64.workspace = true
panelink-audio.workspace = true
panelink-capture.workspace = true
panelink-core.workspace = true
panelink-discovery.workspace = true
panelink-input.workspace = true
panelink-transport.workspace = true
panelink-virtual-display.workspace = true
panelink-video.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
tiny_http.workspace = true
